replaced all lorem Text of blogs

--- a/index.html
+++ b/index.html
@@ -224,71 +224,91 @@
             <div class="">
                 <!-- Blog -->
                 <div class="mt-5">
-                    <div class="bg-white px-3 py-4 border-dashed border-b-2 border-[#3752FD20]">
+                    <div class="bg-white px-5 py-4 border-dotted border-b-2 border-[#3752FD20]">
                         <h3 class="text-xl font-bold ">
                             Question-1: What are the different ways to select an element in the DOM?
                         </h3>
                     </div>
-                    <div class="bg-white px-3 py-4">
+                    <div class="bg-white px-5 py-4">
                         <p class="text-gray-600 text-xl">
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo quibusdam, ab laboriosam
-                            laborum culpa quam vel odio commodi id deserunt. laboriosam laborum culpa quam vel odio
+                            Their are many methods to select an element in the DOM.
+                            <ol class="text-gray-600 text-lg ml-4">
+                                <li>01. Using "getElementById"</li>
+                                <li>02.Using "getElementsByClassName" and looping on them.</li>
+                                <li>03. Using "querySelector" for the child of a parentNode.</li>
+                                <li>04. Using "querySelectorAll" and lopping on them.</li>
+                            </ol>
                         </p>
                     </div>
                 </div>
                 <!-- Blog -->
                 <div class="mt-5">
-                    <div class="bg-white px-3 py-4 border-dashed border-b-2 border-[#3752FD20]">
+                    <div class="bg-white px-5 py-4 border-dashed border-b-2 border-[#3752FD20]">
                         <h3 class="text-xl font-bold ">
                             Question-2: What is the difference between innerHTML, innerText, and textContent ?
                         </h3>
                     </div>
-                    <div class="bg-white px-3 py-4">
+                    <div class="bg-white px-5 py-4">
                         <p class="text-gray-600 text-xl">
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo quibusdam, ab laboriosam
-                            laborum culpa quam vel odio commodi id deserunt. laboriosam laborum culpa quam vel odio
+                            They all allow us to read and update the content of HTML elements.
+                            <br>
+                            <span class="font-semibold underline">innerHTML:</span>
+                            is used to get access of inner content with element tag name.
+                            <br>
+                            <span class="font-semibold underline">textContent:</span>
+                            is used to get access of inner content without the tag names and returns all text as it is rendered on screen including all comment .
+                            <br>
+                            <span class="font-semibold underline">innerText:</span>
+                            is used to get access of inner text only ignoring element tag names and also does not include the text that is hidden with CSS style.
                         </p>
                     </div>
                 </div>
                 <!-- Blog -->
                 <div class="mt-5">
-                    <div class="bg-white px-3 py-4 border-dashed border-b-2 border-[#3752FD20]">
+                    <div class="bg-white px-5 py-4 border-dashed border-b-2 border-[#3752FD20]">
                         <h3 class="text-xl font-bold ">
                             Question-3: What is event delegation in the DOM?
                         </h3>
                     </div>
-                    <div class="bg-white px-3 py-4">
+                    <div class="bg-white px-5 py-4">
                         <p class="text-gray-600 text-xl">
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo quibusdam, ab laboriosam
-                            laborum culpa quam vel odio commodi id deserunt. laboriosam laborum culpa quam vel odio
+                            <span class="font-semibold underline">DOM event delegation</span>
+                             is the way to decide if any user makes any event using keyboard or mouse over any HTML element, what will happen. 
                         </p>
                     </div>
                 </div>
                 <!-- Blog -->
                 <div class="mt-5">
-                    <div class="bg-white px-3 py-4 border-dashed border-b-2 border-[#3752FD20]">
+                    <div class="bg-white px-5 py-4 border-dashed border-b-2 border-[#3752FD20]">
                         <h3 class="text-xl font-bold ">
                             Question-4: What is event bubbling in the DOM?
                         </h3>
                     </div>
-                    <div class="bg-white px-3 py-4">
+                    <div class="bg-white px-5 py-4">
                         <p class="text-gray-600 text-xl">
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo quibusdam, ab laboriosam
-                            laborum culpa quam vel odio commodi id deserunt. laboriosam laborum culpa quam vel odio
+                            <span class="font-semibold underline">DOM event bubbling</span>
+                            if any event happen on any html element, it bubbles to its parentNode to its parentNode to up
+
                         </p>
                     </div>
                 </div>
                 <!-- Blog -->
                 <div class="mt-5">
-                    <div class="bg-white px-3 py-4 border-dashed border-b-2 border-[#3752FD20]">
+                    <div class="bg-white px-5 py-4 border-dashed border-b-2 border-[#3752FD20]">
                         <h3 class="text-xl font-bold ">
                             Question-5: How do you create, add, and remove elements using JavaScript?
                         </h3>
                     </div>
-                    <div class="bg-white px-3 py-4">
+                    <div class="bg-white px-5 py-4">
                         <p class="text-gray-600 text-xl">
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo quibusdam, ab laboriosam
-                            laborum culpa quam vel odio commodi id deserunt. laboriosam laborum culpa quam vel odio
+                            <span class="font-semibold underline">Create element:</span>
+                            to create an element in DOM we use document.createElement.
+                            <br> 
+                            <span class="font-semibold underline">add()</span>
+                            Generally add() is used to add a new 'class' in the classList of an element 
+                            <br> 
+                            <span class="font-semibold underline">remove()</span>
+                            The method is used to remove an element from its parentNode.
                         </p>
                     </div>
                 </div>
